--- a/DXWebApplication/Views/Home/Jobs.cshtml
+++ b/DXWebApplication/Views/Home/Jobs.cshtml
@@ -25,11 +25,26 @@
         jobsGridView.UpdateEdit();
     }
 
+    function onFileUploadComplete(s, e) {
+        var data = e.callbackData.split('|');
+        for (var i = 0; i < data.length; i += 2) {
+            var file = data[i];
+            var url = data[i + 1];
+            var link = document.createElement('A');
+            link.innerHTML = file;
+            link.setAttribute('href', url);
+            link.setAttribute('target', '_blank');
+            var fileContainer = document.getElementById('fileContainer');
+            fileContainer.appendChild(link);
+            fileContainer.appendChild(document.createElement('BR'));
+        }
+    }  
+
 </script>
 
 <main>
 
-
+    
     <section class="row" aria-labelledby="aspnetTitle">
         <h1 id="title">Jobs</h1>
         <div>@Html.Partial("_PartialJobsFilter", (DXWebApplication.Models.Job_Filter)ViewBag.Filter)</div>
