--- a/DXWebApplication/Views/Home/_PartialWorkStatusGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialWorkStatusGridView.cshtml
@@ -10,7 +10,59 @@
 
     settings.CallbackRouteValues = new { Controller = "Home", Action = "PartialWorkStatusGridView" };
     settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Home", Action = "BatchEditingUpdateModel" };
+    settings.SettingsExport.EnableClientSideExportAPI = true;
+    settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.DataAware;
+    settings.ClientSideEvents.ToolbarItemClick = "OnToolbarItemClick";
+    settings.Toolbars.Add(tb =>
+    {
+        tb.Enabled = true;
+        tb.Position = GridToolbarPosition.Top;
+        tb.SettingsAdaptivity.Enabled = true;
+        tb.SettingsAdaptivity.EnableCollapseRootItemsToIcons = true;
 
+
+        tb.Items.Add(i =>
+        {
+            i.Command = GridViewToolbarCommand.Refresh;
+            i.BeginGroup = true;
+            i.AdaptivePriority = 1;
+        });
+        tb.Items.Add(i =>
+        {
+            i.Text = "Export to";
+            i.Image.IconID = DevExpress.Web.ASPxThemes.IconID.ActionsDownload16x16office2013;
+            i.BeginGroup = true;
+            i.AdaptivePriority = 2;
+            i.Items.Add(GridViewToolbarCommand.ExportToPdf);
+            i.Items.Add(GridViewToolbarCommand.ExportToDocx);
+            i.Items.Add(GridViewToolbarCommand.ExportToRtf);
+            i.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Export to XLS(DataAware)";
+            //i.Items.Add(exportitem =>
+            //{
+            //    exportitem.Name = "CustomExportToXLS";
+            //    exportitem.Text = "Export to XLS(WYSIWYG)";
+            //    exportitem.Image.IconID = DevExpress.Web.ASPxThemes.IconID.ExportExporttoxls16x16office2013;
+            //});
+            //i.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Export to XLSX(DataAware)";
+            //i.Items.Add(exportitem =>
+            //{
+            //    exportitem.Name = "CustomExportToXLSX";
+            //    exportitem.Text = "Export to XLSX(WYSIWYG)";
+            //    exportitem.Image.IconID = DevExpress.Web.ASPxThemes.IconID.ExportExporttoxlsx16x16office2013;
+            //});
+        });
+        tb.Items.Add(i =>
+        {
+
+            i.Text = "Report";
+            i.Name = "reportButton";
+            i.Command = GridViewToolbarCommand.Custom;
+
+
+            i.AdaptivePriority = 3;
+
+        });
+    });
 
     settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
     settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
@@ -39,6 +91,8 @@
 
 
 
+
+
     settings.Columns.Add(c =>
     {
         c.FieldName = "WST_Name";
@@ -46,9 +100,10 @@
         c.EditorProperties().TextBox(tb =>
         {
             tb.ClientSideEvents.ValueChanged = c.FieldName + "_OnValueChange";
-            tb.ValidationSettings.CausesValidation = false;
-            tb.ValidationSettings.RequiredField.IsRequired = false;
-            tb.ClientSideEvents.Validation = "onValidation";
+            tb.ValidationSettings.RequiredField.IsRequired = true;
+            tb.ValidationSettings.ErrorDisplayMode = ErrorDisplayMode.ImageWithTooltip;
+            tb.ValidationSettings.RequiredField.ErrorText = "Name1 field Required.";
+            tb.ValidationSettings.Display = Display.Dynamic;
         });
     });
 
@@ -57,14 +112,16 @@
     {
         c.FieldName = "WST_Name2";
         c.Caption = "Name2";
+
         c.EditorProperties().TextBox(tb =>
         {
             tb.ClientSideEvents.ValueChanged = c.FieldName + "_OnValueChange";
-            tb.ValidationSettings.CausesValidation = false;
-            tb.ValidationSettings.RequiredField.IsRequired = false;
-            tb.ClientSideEvents.Validation = "onValidation";
-
+            tb.ValidationSettings.RequiredField.IsRequired = true;
+            tb.ValidationSettings.ErrorDisplayMode = ErrorDisplayMode.ImageWithTooltip;
+            tb.ValidationSettings.RequiredField.ErrorText = "Name2 field Required.";
+            tb.ValidationSettings.Display = Display.Dynamic;
         });
+
     });
 
 
@@ -91,7 +148,7 @@
             p.TextField = "key";
             p.ValueField = "value";
             p.ValueType = typeof(int);
-            p.DataSource = DXWebApplication.Models.KindOfWorkStatus.Gender;
+            p.DataSource = DXWebApplication.Models.KindOfWorkStatus.WorkStatus;
 
         });
     });
@@ -110,7 +167,6 @@
         c.Caption = "Update Date";
         c.ReadOnly = true;
     });
-
 }).Bind(Model).GetHtml()
 
 
