--- a/DXWebApplication/Views/Shared/_Layout.cshtml
+++ b/DXWebApplication/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Employee", "Employee", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Job", "Jobs", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Work Status", "WorkStatus", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
