--- a/DXWebApplication/Views/Home/Employee.cshtml
+++ b/DXWebApplication/Views/Home/Employee.cshtml
@@ -4,7 +4,9 @@
 
 <script>
 
+
     function OnBeginCallback(s, e) {
+
         if (e.command === "STARTEDIT") {
             var key = s.GetRowKey(s.GetFocusedRowIndex());
             e.customArgs['ACC_EMP_ID'] = key;
@@ -12,21 +14,40 @@
         e.customArgs['Command'] = e.command;
     }
 
+    var rowIndex = 0;
     function SalaryAmountGridView_OnBatchEditStartEditing(s, e) {
         rowIndex = e.visibleIndex;
-        var salary = SalaryAmountGridView.batchEditApi.GetCellValue(rowIndex, "HRS_SAL_SalaryAmount", false);
-        var startdate = SalaryAmountGridView.batchEditApi.GetCellValue(rowIndex, "HRS_SAL_StartDate", false);
-
-        if (salary === null && startdate === null) {
-            SalaryAmountGridView.batchEditApi.SetCellValue(rowIndex, "HRS_SAL_SalaryAmount", salary);
-            SalaryAmountGridView.batchEditApi.SetCellValue(rowIndex, "HRS_SAL_StartDate", startdate);
-       
+        var salaryamount = SalaryAmountGridView.batchEditApi.GetCellValue(rowIndex, "HRS_SAL_SalaryAmount", false);
+        var startDate = SalaryAmountGridView.batchEditApi.GetCellValue(rowIndex, "HRS_SAL_StartDate", false);
+        if (e.focusedColumn.fieldName == "HRS_SAL_StartDate") {
+            if (salaryamount == null)
+                e.cancel = true;
         }
-
-
+        if (e.focusedColumn.fieldName == "HRS_SAL_EndDate") {
+            if (salaryamount == null || startDate == null)
+                e.cancel = true;
+        }
+      
     }
- 
 
+
+    function HRS_SAL_SalaryAmount_OnValueChange(s, e) {
+
+        var salaryamount = s.GetValue();
+        var startDate = s.GetValue();
+
+        if (startDate == null || startDate == "") {
+            SalaryAmountGridView.batchEditApi.SetCellValue(rowIndex, "HRS_SAL_StartDate", salaryamount);
+        }
+    }
+
+
+//    function employeeEditForm_SavebtnClick(s, e) {
+////validation
+//        else {
+//            employeeGridView.UpdateEdit();
+//        }
+//    }
 
            
 
