--- a/DXWebApplication/Views/Home/_PartialSalGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialSalGridView.cshtml
@@ -19,18 +19,23 @@
     settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = true;
     settings.SettingsEditing.BatchEditSettings.KeepChangesOnCallbacks = DefaultBoolean.True;
     settings.SettingsEditing.NewItemRowPosition = GridViewNewItemRowPosition.Bottom;
+    settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = false;
+
+
 
     settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
     settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 700;
     settings.EditFormLayoutProperties.SettingsItems.VerticalAlign = FormLayoutVerticalAlign.Middle;
 
     settings.ClientSideEvents.BatchEditStartEditing = settings.Name + "_OnBatchEditStartEditing";
+    settings.ClientSideEvents.BatchEditRowInserting = settings.Name + "_OnBatchEditRowInserting";
 
     settings.CommandColumn.Visible = true;
     settings.CommandColumn.ShowCancelButton = true;
     settings.CommandColumn.ShowDeleteButton = true;
     settings.CommandColumn.ShowNewButtonInHeader = true;
     settings.CommandColumn.ShowCancelButton = true;
+    settings.CommandColumn.ShowRecoverButton = false;
     settings.SettingsBehavior.AllowFocusedRow = true;
     settings.CommandColumn.Width = Unit.Pixel(150);
 
