--- a/DXWebApplication/Views/Home/_PartialWorkStatusGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialWorkStatusGridView.cshtml
@@ -69,7 +69,7 @@
 
     settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
     settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.Click;
-    settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = true;
+    settings.SettingsEditing.BatchEditSettings.HighlightDeletedRows = true;//remove row from batch
     settings.SettingsEditing.BatchEditSettings.KeepChangesOnCallbacks = DefaultBoolean.True;
     settings.SettingsEditing.NewItemRowPosition = GridViewNewItemRowPosition.Bottom;
 
